Allow overrides of app bundled configuration Updated scripts to use parameterized appName and appPath from properties file Updated README notes.